// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConsolePage renders a warning banner if there is not an authorized user 1`] = `
<div
  className="container half-width-element py-5 align-items-start"
>
  <h1>
    Program Console
  </h1>
  <div
    className="alert fade alert-danger"
    hidden={true}
    role="alert"
  >
    <div
      className="alert-dialog"
    >
      <div>
        <p>
          An error was encountered while loading your program list: 
          <em>
            null
          </em>
        </p>
        <p>
          Please try waiting a moment and then refreshing the page. If the issue persists, please reach out to 
          <a
            href="mailto:partner-support@edx.org"
          >
            partner-support@edx.org
          </a>
          .
        </p>
      </div>
    </div>
  </div>
  <div
    className="alert fade alert-warning show"
    hidden={false}
    role="alert"
  >
    <div
      className="alert-dialog"
    >
      <p>
        It appears you do not have proper permissions to access this application. Please reach out to 
        <a
          href="mailto:partner-support@edx.org"
        >
          partner-support@edx.org
        </a>
         requesting access to the Registrar service.
      </p>
    </div>
  </div>
</div>
`;

exports[`ConsolePage renders an error banner when there was an error loading programs 1`] = `
<div
  className="container half-width-element py-5 align-items-start"
>
  <h1>
    Program Console
  </h1>
  <div
    className="alert fade alert-danger show"
    hidden={false}
    role="alert"
  >
    <div
      className="alert-dialog"
    >
      <div>
        <p>
          An error was encountered while loading your program list: 
          <em>
            Request failed with HTTP 418
          </em>
        </p>
        <p>
          Please try waiting a moment and then refreshing the page. If the issue persists, please reach out to 
          <a
            href="mailto:partner-support@edx.org"
          >
            partner-support@edx.org
          </a>
          .
        </p>
      </div>
    </div>
  </div>
  <div
    className="alert fade alert-warning"
    hidden={true}
    role="alert"
  >
    <div
      className="alert-dialog"
    >
      <p>
        It appears you do not have proper permissions to access this application. Please reach out to 
        <a
          href="mailto:partner-support@edx.org"
        >
          partner-support@edx.org
        </a>
         requesting access to the Registrar service.
      </p>
    </div>
  </div>
</div>
`;

exports[`ConsolePage renders program banners when they are included 1`] = `
<div
  className="container half-width-element py-5 align-items-start"
>
  <h1>
    Program Console
  </h1>
  <div
    className="alert fade alert-danger"
    hidden={true}
    role="alert"
  >
    <div
      className="alert-dialog"
    >
      <div>
        <p>
          An error was encountered while loading your program list: 
          <em>
            null
          </em>
        </p>
        <p>
          Please try waiting a moment and then refreshing the page. If the issue persists, please reach out to 
          <a
            href="mailto:partner-support@edx.org"
          >
            partner-support@edx.org
          </a>
          .
        </p>
      </div>
    </div>
  </div>
  <div
    className="alert fade alert-warning"
    hidden={true}
    role="alert"
  >
    <div
      className="alert-dialog"
    >
      <p>
        It appears you do not have proper permissions to access this application. Please reach out to 
        <a
          href="mailto:partner-support@edx.org"
        >
          partner-support@edx.org
        </a>
         requesting access to the Registrar service.
      </p>
    </div>
  </div>
  <div
    className="container mb-4"
  >
    <h2>
      a masters
    </h2>
    <div
      className="alert fade alert-dismissible alert-danger show"
      hidden={false}
      role="alert"
    >
      <button
        aria-label="Close"
        className="btn close"
        onBlur={[Function]}
        onClick={[Function]}
        onKeyDown={[Function]}
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
      </button>
      <div
        className="alert-dialog"
      >
        <div
          className="modal-alert"
        >
          Sorry something went wrong 
        </div>
      </div>
    </div>
    <div
      className="pgn_collapsible shadow collapsible-card is-open"
      open={undefined}
    >
      <div
        aria-expanded={true}
        className="collapsible-trigger"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <span>
          Manage Enrollments
        </span>
        <span
          className="ml-2"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-minus fa-w-14 "
            data-icon="minus"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 208H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h384c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
      </div>
      <div
        className="pgn-transition-replace-group position-relative"
        style={
          Object {
            "height": null,
          }
        }
      >
        <div
          style={
            Object {
              "padding": ".1px 0",
            }
          }
        >
          <div
            className="collapsible-body"
          >
            <div
              className="container"
            >
              <div
                className="row mb-3 mb-md-2 "
              >
                <div
                  className="col-md"
                >
                  <div
                    className="btn btn-primary w-100 mb-1"
                  >
                    <input
                      className="sr input-overlay-hack"
                      onChange={[Function]}
                      type="file"
                    />
                    Upload Program Enrollments
                  </div>
                </div>
                <div
                  className="col-md"
                >
                  <button
                    className="btn btn-primary w-100"
                    onClick={[Function]}
                  >
                    Download Program Enrollments
                  </button>
                </div>
              </div>
              <div
                className="row"
              >
                <div
                  className="col-md"
                >
                  <div
                    className="btn btn-primary w-100 mb-1"
                  >
                    <input
                      className="sr input-overlay-hack"
                      onChange={[Function]}
                      type="file"
                    />
                    Upload Course Enrollments
                  </div>
                </div>
                <div
                  className="col-md"
                >
                  <button
                    className="btn btn-primary w-100"
                    onClick={[Function]}
                  >
                    Download Course Enrollments
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="container mb-4"
  >
    <h2>
      b masters
    </h2>
    <div
      className="alert fade alert-dismissible alert-success show"
      hidden={false}
      role="alert"
    >
      <button
        aria-label="Close"
        className="btn close"
        onBlur={[Function]}
        onClick={[Function]}
        onKeyDown={[Function]}
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
      </button>
      <div
        className="alert-dialog"
      >
        <div
          className="modal-alert"
        >
          You did it! 
        </div>
      </div>
    </div>
    <div
      className="pgn_collapsible shadow collapsible-card is-open"
      open={undefined}
    >
      <div
        aria-expanded={true}
        className="collapsible-trigger"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <span>
          Manage Enrollments
        </span>
        <span
          className="ml-2"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-minus fa-w-14 "
            data-icon="minus"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 208H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h384c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
      </div>
      <div
        className="pgn-transition-replace-group position-relative"
        style={
          Object {
            "height": null,
          }
        }
      >
        <div
          style={
            Object {
              "padding": ".1px 0",
            }
          }
        >
          <div
            className="collapsible-body"
          >
            <div
              className="container"
            >
              <div
                className="row mb-3 mb-md-2 "
              >
                <div
                  className="col-md"
                >
                  <div
                    className="btn btn-primary w-100 mb-1"
                  >
                    <input
                      className="sr input-overlay-hack"
                      onChange={[Function]}
                      type="file"
                    />
                    Upload Program Enrollments
                  </div>
                </div>
                <div
                  className="col-md"
                >
                  <button
                    className="btn btn-primary w-100"
                    onClick={[Function]}
                  >
                    Download Program Enrollments
                  </button>
                </div>
              </div>
              <div
                className="row"
              >
                <div
                  className="col-md"
                >
                  <div
                    className="btn btn-primary w-100 mb-1"
                  >
                    <input
                      className="sr input-overlay-hack"
                      onChange={[Function]}
                      type="file"
                    />
                    Upload Course Enrollments
                  </div>
                </div>
                <div
                  className="col-md"
                >
                  <button
                    className="btn btn-primary w-100"
                    onClick={[Function]}
                  >
                    Download Course Enrollments
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConsolePage renders programs when there is data passed in 1`] = `
<div
  className="container half-width-element py-5 align-items-start"
>
  <h1>
    Program Console
  </h1>
  <div
    className="alert fade alert-danger"
    hidden={true}
    role="alert"
  >
    <div
      className="alert-dialog"
    >
      <div>
        <p>
          An error was encountered while loading your program list: 
          <em>
            null
          </em>
        </p>
        <p>
          Please try waiting a moment and then refreshing the page. If the issue persists, please reach out to 
          <a
            href="mailto:partner-support@edx.org"
          >
            partner-support@edx.org
          </a>
          .
        </p>
      </div>
    </div>
  </div>
  <div
    className="alert fade alert-warning"
    hidden={true}
    role="alert"
  >
    <div
      className="alert-dialog"
    >
      <p>
        It appears you do not have proper permissions to access this application. Please reach out to 
        <a
          href="mailto:partner-support@edx.org"
        >
          partner-support@edx.org
        </a>
         requesting access to the Registrar service.
      </p>
    </div>
  </div>
  <div
    className="container mb-4"
  >
    <h2>
      a masters
    </h2>
    <div
      className="pgn_collapsible shadow collapsible-card is-open"
      open={undefined}
    >
      <div
        aria-expanded={true}
        className="collapsible-trigger"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <span>
          Manage Enrollments
        </span>
        <span
          className="ml-2"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-minus fa-w-14 "
            data-icon="minus"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 208H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h384c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
      </div>
      <div
        className="pgn-transition-replace-group position-relative"
        style={
          Object {
            "height": null,
          }
        }
      >
        <div
          style={
            Object {
              "padding": ".1px 0",
            }
          }
        >
          <div
            className="collapsible-body"
          >
            <div
              className="container"
            >
              <div
                className="row mb-3 mb-md-2 "
              >
                <div
                  className="col-md"
                >
                  <div
                    className="btn btn-primary w-100 mb-1"
                  >
                    <input
                      className="sr input-overlay-hack"
                      onChange={[Function]}
                      type="file"
                    />
                    Upload Program Enrollments
                  </div>
                </div>
                <div
                  className="col-md"
                >
                  <button
                    className="btn btn-primary w-100"
                    onClick={[Function]}
                  >
                    Download Program Enrollments
                  </button>
                </div>
              </div>
              <div
                className="row"
              >
                <div
                  className="col-md"
                >
                  <div
                    className="btn btn-primary w-100 mb-1"
                  >
                    <input
                      className="sr input-overlay-hack"
                      onChange={[Function]}
                      type="file"
                    />
                    Upload Course Enrollments
                  </div>
                </div>
                <div
                  className="col-md"
                >
                  <button
                    className="btn btn-primary w-100"
                    onClick={[Function]}
                  >
                    Download Course Enrollments
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="container mb-4"
  >
    <h2>
      b masters
    </h2>
    <div
      className="pgn_collapsible shadow collapsible-card is-open"
      open={undefined}
    >
      <div
        aria-expanded={true}
        className="collapsible-trigger"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <span>
          Manage Enrollments
        </span>
        <span
          className="ml-2"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-minus fa-w-14 "
            data-icon="minus"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 208H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h384c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
      </div>
      <div
        className="pgn-transition-replace-group position-relative"
        style={
          Object {
            "height": null,
          }
        }
      >
        <div
          style={
            Object {
              "padding": ".1px 0",
            }
          }
        >
          <div
            className="collapsible-body"
          >
            <div
              className="container"
            >
              <div
                className="row mb-3 mb-md-2 "
              >
                <div
                  className="col-md"
                >
                  <div
                    className="btn btn-primary w-100 mb-1"
                  >
                    <input
                      className="sr input-overlay-hack"
                      onChange={[Function]}
                      type="file"
                    />
                    Upload Program Enrollments
                  </div>
                </div>
                <div
                  className="col-md"
                >
                  <button
                    className="btn btn-primary w-100"
                    onClick={[Function]}
                  >
                    Download Program Enrollments
                  </button>
                </div>
              </div>
              <div
                className="row"
              >
                <div
                  className="col-md"
                >
                  <div
                    className="btn btn-primary w-100 mb-1"
                  >
                    <input
                      className="sr input-overlay-hack"
                      onChange={[Function]}
                      type="file"
                    />
                    Upload Course Enrollments
                  </div>
                </div>
                <div
                  className="col-md"
                >
                  <button
                    className="btn btn-primary w-100"
                    onClick={[Function]}
                  >
                    Download Course Enrollments
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConsolePage renders with the most basic props passed to it 1`] = `
<div
  className="container half-width-element py-5 align-items-start"
>
  <h1>
    Program Console
  </h1>
  <div
    className="alert fade alert-danger"
    hidden={true}
    role="alert"
  >
    <div
      className="alert-dialog"
    >
      <div>
        <p>
          An error was encountered while loading your program list: 
          <em>
            null
          </em>
        </p>
        <p>
          Please try waiting a moment and then refreshing the page. If the issue persists, please reach out to 
          <a
            href="mailto:partner-support@edx.org"
          >
            partner-support@edx.org
          </a>
          .
        </p>
      </div>
    </div>
  </div>
  <div
    className="alert fade alert-warning"
    hidden={true}
    role="alert"
  >
    <div
      className="alert-dialog"
    >
      <p>
        It appears you do not have proper permissions to access this application. Please reach out to 
        <a
          href="mailto:partner-support@edx.org"
        >
          partner-support@edx.org
        </a>
         requesting access to the Registrar service.
      </p>
    </div>
  </div>
</div>
`;
